typecheck/tests/micro/good/paratheses.c
//binary expression for literals and identifier with parantheses
void main(void)
{
	//good
	int i;
	(i);
	(1);
	((i));
	/*(i)+1;
	i-((1));
	(i*1);
	((i/1));*/
	

return;	
}
