typecheck/tests/micro/bad/array_e1.c
void main(void)
{
	int i;
	i[1];
return;
}